<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="12dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:id="@+id/login_fragment_ishop_icon_text_view"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_fragment_ishop_icon_text_view"
        android:layout_marginTop="20dp"
        android:text="@string/login_error"
        android:textColor="@color/error"
        android:textAlignment="center"
        android:visibility="gone"
        android:id="@+id/login_fragment_error_text_view"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:id="@+id/login_fragment_info_LinearLayout"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="12dp"
            android:inputType="textEmailAddress"
            android:id="@+id/fragment_login_email_edit_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="25dp"
            android:id="@+id/fragment_login_password_edit_text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/fragment_login_login_button"
            android:layout_below="@+id/login_fragment_info_LinearLayout"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/register"
            android:id="@+id/fragment_login_register_button"
            android:textColor="@color/button"/>


    </LinearLayout>



</RelativeLayout>