<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="12dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:id="@+id/register_fragment_ishop_icon_text_view"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_fragment_ishop_icon_text_view"
        android:layout_marginTop="20dp"
        android:text="the given email is already taken, please enter another one"
        android:textColor="@color/error"
        android:textAlignment="center"
        android:visibility="gone"
        android:id="@+id/register_fragment_error_text_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:id="@+id/register_fragment_info_LinearLayout"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="12dp"
            android:inputType="textEmailAddress"
            android:id="@+id/register_fragment_email_edit_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="12dp"
            android:id="@+id/register_fragment_password_edit_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:id="@+id/register_fragment_confirm_password_edit_text"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:id="@+id/register_fragment_register_button"
        android:layout_below="@+id/register_fragment_info_LinearLayout"/>

</RelativeLayout>